[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-iml"
version = "0.1.0"
description = "IML Agent Compiler — parse human intent into typed execution graphs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Agentic Labs", email = "justin@agntc.tech" },
]
keywords = ["agent", "compiler", "intent", "graph", "llm", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/agntc-labs/forge-iml"
Repository = "https://github.com/agntc-labs/forge-iml"

[tool.hatch.build.targets.wheel]
packages = ["forge_iml"]
